changed to overflow hidden to prevent scrolling on phone

--- a/homepage_style.css
+++ b/homepage_style.css
@@ -9,7 +9,8 @@
 html, body {
     margin: 0px;
     background-color: var(--background-color);
-    font-family: "Copperplate", fantasy;
+    font-family: fantasy;
+    overflow: hidden;
 }
 
 p {
